force-app/main/default/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <inlineHelpText>Post an image (200px wide, transparent .PNG recommended) in the &quot;Product Images&quot; folder of Documents.  Copy the Record ID (in the URL) of the new document and paste it here.</inlineHelpText>
        <label>Image ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>purl__c</fullName>
        <formula>if((Image__c != &apos;&apos; || Image__c != null),LEFT($Api.Enterprise_Server_URL_290, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_290) -1) + &apos;/servlet/servlet.FileDownload?file=&apos; + Image__c,LEFT($Api.Enterprise_Server_URL_290, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_290) -1) + &apos;/resource/no_product_image&apos;)</formula>
        <label>purl</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>