force-app/main/default/objects/Product2/fields/Modal__c.field-meta.xml
<CustomField>
    <fullName>Modal__c</fullName>
    <label>Modal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>