force-app/main/default/objects/Product2/fields/Picture_Id__c.field-meta.xml
<CustomField>
    <fullName>Picture_Id__c</fullName>
    <label>Picture Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>