force-app/main/default/objects/Product2/fields/Product_image__c.field-meta.xml
<CustomField>
    <fullName>Product_image__c</fullName>
    <formula>if(len( Picture_Id__c)&gt;0,IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; Picture_Id__c , &quot;&quot;), &quot;None Loaded&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product image</label>
    <type>Text</type>
</CustomField>