force-app/main/default/objects/Product2/listViews/Vegetables.listView-meta.xml
<ListView>
    <fullName>Vegetables</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
    </filters>
    <label>Vegetables</label>
</ListView>